syntax = "proto3";
package p2p_transport;

service P2PTransport {
  rpc LocalPeerId(Empty) returns (PeerId);
  rpc GetMessages(Empty) returns (stream Message);
  rpc SendMessage(Message) returns (Empty);
  rpc ToggleSubscription(Subscription) returns (Empty);
  rpc Sign(Bytes) returns (Bytes);
}

message Empty {}

message PeerId {
  string peer_id = 1;
}

message Message {
  // None for outgoing broadcast messages, Some for others
  optional string peer_id = 1;
  // None for direct messages, Some for broadcast messages
  optional string topic = 2;
  bytes content = 3;
}

message Subscription {
  string topic = 1;
  bool subscribed = 2;
  bool allow_unordered = 3;
}

message Bytes {
  bytes bytes = 1;
}
